--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       </div>
 
       <div class="image">
-         <img src="/img/dumbbell_homepage.png" alt="">
+         <img src="./img/dumbbell_homepage.png" alt="">
       </div>
    </section>
 
